Bug 1370459 - Polish the onboarding overlay UI to align with new visual spec;r=Fischer,mossop,rexboy
MozReview-Commit-ID: 9c1Aup8hhv5

UltraBlame original commit: 5fa6bbe236e081e36b80264f6456de04db42af99

--- a/browser/extensions/onboarding/content/onboarding.css
+++ b/browser/extensions/onboarding/content/onboarding.css
@@ -355,11 +355,11 @@ dialog
 {
 width
 :
-1200px
+960px
 ;
 height
 :
-550px
+510px
 ;
 background
 :
@@ -390,6 +390,12 @@ rgba
 opacity
 *
 /
+border
+-
+radius
+:
+3px
+;
 position
 :
 relative
@@ -402,7 +408,7 @@ calc
 50
 %
 -
-600px
+480px
 )
 ;
 top
@@ -412,7 +418,7 @@ calc
 50
 %
 -
-275px
+255px
 )
 ;
 display
@@ -460,7 +466,7 @@ dialog
 -
 start
 ]
-240px
+230px
 [
 page
 -
@@ -480,7 +486,7 @@ max
 -
 height
 :
-550px
+510px
 )
 {
 #
@@ -542,7 +548,7 @@ margin
 -
 top
 :
-36px
+24px
 ;
 margin
 -
@@ -571,6 +577,12 @@ font
 size
 :
 22px
+;
+font
+-
+weight
+:
+200
 ;
 }
 #
@@ -754,13 +766,33 @@ start
 solid
 transparent
 ;
+border
+-
+radius
+:
+2px
+;
 padding
 -
 inline
 -
 start
 :
-66px
+49px
+;
+margin
+-
+inline
+-
+start
+:
+10px
+;
+margin
+-
+bottom
+:
+9px
 ;
 line
 -
@@ -781,7 +813,7 @@ background
 position
 :
 left
-27px
+10px
 center
 ;
 background
@@ -822,6 +854,73 @@ position
 right
 27px
 center
+;
+}
+#
+onboarding
+-
+tour
+-
+list
+>
+li
+.
+onboarding
+-
+complete
+:
+:
+before
+{
+content
+:
+url
+(
+"
+img
+/
+icons_tour
+-
+complete
+.
+svg
+"
+)
+;
+position
+:
+relative
+;
+left
+:
+6px
+;
+top
+:
+-
+10px
+;
+}
+#
+onboarding
+-
+tour
+-
+list
+>
+li
+.
+onboarding
+-
+complete
+{
+padding
+-
+inline
+-
+start
+:
+29px
 ;
 }
 #
@@ -947,7 +1046,7 @@ page
 -
 start
 ]
-480px
+368px
 [
 tour
 -
@@ -1004,15 +1103,25 @@ content
 -
 start
 ;
-padding
-:
-40px
-;
 font
 -
 size
 :
 15px
+;
+line
+-
+height
+:
+22px
+;
+padding
+-
+inline
+-
+start
+:
+40px
 ;
 padding
 -
@@ -1020,7 +1129,7 @@ inline
 -
 end
 :
-40px
+28px
 ;
 }
 .
@@ -1039,11 +1148,22 @@ size
 36px
 ;
 margin
+-
+top
 :
-40px
-0
-20px
-0
+16px
+;
+font
+-
+weight
+:
+300
+;
+line
+-
+height
+:
+44px
 ;
 }
 .
@@ -1310,6 +1430,29 @@ button
 >
 button
 {
+padding
+:
+10px
+20px
+;
+font
+-
+size
+:
+15px
+;
+font
+-
+weight
+:
+600
+;
+line
+-
+height
+:
+21px
+;
 background
 :
 #
@@ -1324,17 +1467,6 @@ border
 radius
 :
 3px
-;
-padding
-:
-10px
-20px
-;
-font
--
-size
-:
-14px
 ;
 color
 :
@@ -1358,6 +1490,10 @@ rgba
 23
 )
 ;
+cursor
+:
+pointer
+;
 float
 :
 inline
@@ -1370,7 +1506,14 @@ inline
 -
 end
 :
-70px
+26px
+;
+margin
+-
+top
+:
+-
+20px
 ;
 }
 .
